✨(frontend) create meeting for later
Inspired by the Google Meet user experience.
A simple UX for scheduling meetings was requested by some users.
This is a quick and basic poc to validate the UX in a production
environment. If it gains traction, it will be refined and consolidated.

--- a/src/frontend/src/locales/de/home.json
+++ b/src/frontend/src/locales/de/home.json
@@ -9,5 +9,16 @@
   "joinMeeting": "",
   "joinMeetingTipContent": "",
   "joinMeetingTipHeading": "",
-  "loginToCreateMeeting": ""
+  "loginToCreateMeeting": "",
+  "createMenu": {
+    "laterOption": "",
+    "instantOption": ""
+  },
+  "laterMeetingDialog": {
+    "heading": "",
+    "description": "",
+    "copied": "",
+    "copy": "",
+    "inputLabel": ""
+  }
 }
