💩(frontend) add confirmation before muting participant
This commit focuses on the UX more than the code quality. In facts,
we should design a centralized component/alert service, that we
can trigger anywhere in the codebase, when a user is prompted for
confirmation.

The alert modal with cancel/submit buttons and a description is generic.
Creating technical debt here.

--- a/src/frontend/src/locales/de/rooms.json
+++ b/src/frontend/src/locales/de/rooms.json
@@ -51,6 +51,11 @@
     "heading": "",
     "closeButton": "",
     "you": "",
-    "muteParticipant": ""
+    "muteParticipant": "",
+    "muteParticipantAlert": {
+      "description": "",
+      "confirm": "",
+      "cancel": ""
+    }
   }
 }
