--- a/src/frontend/src/locales/fr/rooms.json
+++ b/src/frontend/src/locales/fr/rooms.json
@@ -51,6 +51,11 @@
     "heading": "Participants",
     "closeButton": "Masquer les participants",
     "you": "Vous",
-    "muteParticipant": "Couper le micro de {{name}}"
+    "muteParticipant": "Couper le micro de {{name}}",
+    "muteParticipantAlert": {
+      "description": "Couper le micro de {{name}} pour tous les participants ? {{name}} est la seule personne habilitée à réactiver son micro",
+      "confirm": "Couper le micro",
+      "cancel": "Annuler"
+    }
   }
 }
