🚸(frontend) avoid blocking user with invitation dialog
Removed annoying overlay that blocked the user. (feedback from @spaccoud)

Previous design required one click too many. As this dialog doesn't need
an overlay, I couldn't use the default primitive.

It's a hacky but functional, creating technical debt here.

Closer to the Gmeet design. Added a warning about permissions
since the rooms are public in beta.

Apologies @manuhabitela, this may impact accessibility for  users unfamiliar
with the copy icon. Let's conduct user testing.

--- a/src/frontend/src/locales/de/rooms.json
+++ b/src/frontend/src/locales/de/rooms.json
@@ -12,10 +12,10 @@
   },
   "leaveRoomPrompt": "",
   "shareDialog": {
-    "copied": "",
     "copy": "",
     "heading": "",
-    "inputLabel": ""
+    "description": "",
+    "permissions": ""
   },
   "error": {
     "createRoom": {
