--- a/src/frontend/src/locales/en/rooms.json
+++ b/src/frontend/src/locales/en/rooms.json
@@ -12,10 +12,10 @@
   },
   "leaveRoomPrompt": "This will make you leave the meeting.",
   "shareDialog": {
-    "copied": "Copied",
-    "copy": "Copy",
-    "heading": "Share the meeting link",
-    "inputLabel": "Meeting link"
+    "copy": "Copy link",
+    "heading": "Your meeting is ready",
+    "description": "Share this link with people you want to invite to the meeting.",
+    "permissions": "People with this link do not need your permission to join this meeting."
   },
   "error": {
     "createRoom": {
