✨(frontend) allow lowering all hands at once
Inspired from Gmeet. Add a button to lower all hands at once.
It should be quite useful for room moderator/admin.

The UX might feel strange, having this action button at the top of
the list, but I could not figure out a better layout. In terms of
UX I feel this is the best we can provide. However, the UI should
definitely be improved.

--- a/src/frontend/src/locales/de/rooms.json
+++ b/src/frontend/src/locales/de/rooms.json
@@ -68,6 +68,7 @@
       "cancel": ""
     },
     "raisedHands": "",
-    "lowerParticipantHand": ""
+    "lowerParticipantHand": "",
+    "lowerParticipantsHand": ""
   }
 }
