--- a/src/frontend/src/locales/de/rooms.json
+++ b/src/frontend/src/locales/de/rooms.json
@@ -61,6 +61,7 @@
       "close": ""
     },
     "you": "",
+    "muteYourself": "",
     "muteParticipant": "",
     "muteParticipantAlert": {
       "description": "",
