🚸(frontend) enhance accessibility of 'copy link' button
Added user feedback for actions with explicit text indicating
URL will be copied to clipboard. Modeled after Jitsi's button
behavior for clarity and consistency in user experience.

--- a/src/frontend/src/locales/de/rooms.json
+++ b/src/frontend/src/locales/de/rooms.json
@@ -13,6 +13,7 @@
   "leaveRoomPrompt": "",
   "shareDialog": {
     "copy": "",
+    "copied": "",
     "heading": "",
     "description": "",
     "permissions": ""
