--- a/src/frontend/src/locales/fr/home.json
+++ b/src/frontend/src/locales/fr/home.json
@@ -17,8 +17,8 @@
   "laterMeetingDialog": {
     "heading": "Vos informations de connexion",
     "description": "Envoyez ce lien aux personnes que vous souhaitez inviter à la réunion. Ils pourront la rejoindre sans Agent Connect.",
-    "copied": "Lien copié",
-    "copy": "Copier le lien",
-    "inputLabel": "Lien vers la réunion"
+    "copy": "Copier le lien de la réunion",
+    "copied": "Lien copié dans le presse-papiers",
+    "permissions": "Les personnes disposant de ce lien n'ont pas besoin de votre autorisation pour rejoindre cette réunion."
   }
 }
