✨(frontend) notify user when hands are raised
Using toast, first draft of a toast notification inspired by Gmeet.
Users can open the waiting list to see all the raised hands.

--- a/src/frontend/src/locales/en/notifications.json
+++ b/src/frontend/src/locales/en/notifications.json
@@ -2,5 +2,9 @@
   "defaultName": "A contributor",
   "joined": {
     "description": "{{name}} join the room"
+  },
+  "raised": {
+    "description": "{{name}} raised its hand.",
+    "cta": "Open waiting list"
   }
 }
