✨(frontend) introduce 'effects' menu item
Increased all icons size, as they looked a bit small on screen.
Introduce a new component separator, to organize menu items
in section.

Work in progress, added the 'effects' item, which triggers no
action yet.

--- a/src/frontend/src/locales/de/rooms.json
+++ b/src/frontend/src/locales/de/rooms.json
@@ -69,7 +69,8 @@
       "feedbacks": "",
       "support": "",
       "settings": "",
-      "username": ""
+      "username": "",
+      "effects": ""
     }
   },
   "participants": {
