--- a/src/frontend/src/locales/en/rooms.json
+++ b/src/frontend/src/locales/en/rooms.json
@@ -67,7 +67,8 @@
       "feedbacks": "Give us feedbacks",
       "support": "Get Help on Tchap",
       "settings": "Settings",
-      "username": "Update Your Name"
+      "username": "Update Your Name",
+      "effects": "Apply effects"
     }
   },
   "participants": {
