--- a/src/frontend/src/locales/fr/rooms.json
+++ b/src/frontend/src/locales/fr/rooms.json
@@ -67,7 +67,8 @@
       "feedbacks": "Partager votre avis",
       "support": "Obtenir de l'aide sur Tchap",
       "settings": "Paramètres",
-      "username": "Choisir votre nom"
+      "username": "Choisir votre nom",
+      "effects": "Appliquer des effets"
     }
   },
   "participants": {
