♻️(frontend) refactor tooltip on screen share toggle
Reorganize tooltip to follow others toggle buttons.

--- a/src/frontend/src/locales/de/rooms.json
+++ b/src/frontend/src/locales/de/rooms.json
@@ -53,6 +53,10 @@
       "raise": "",
       "lower": ""
     },
+    "screenShare": {
+      "start": "",
+      "stop": ""
+    },
     "leave": "",
     "participants": {
       "open": "",
