♻️(frontend) introduce a side panel
Refactor side panel into a reusable component to display any interactive
content like menus, messages, participant lists, or effects. Establish it
as a core feature of the videoconference tool.

Improve extensibility and better share responsibilities. The next step is to
refactor the chat to render inside the side panel.

--- a/src/frontend/src/locales/en/rooms.json
+++ b/src/frontend/src/locales/en/rooms.json
@@ -71,10 +71,17 @@
       "effects": "Apply effects"
     }
   },
+  "sidePanel": {
+    "heading": {
+      "participants": "Participants"
+    },
+    "content": {
+      "participants": "participants"
+    },
+    "closeButton": "Hide {{content}}"
+  },
   "participants": {
-    "heading": "Participants",
     "subheading": "In room",
-    "closeButton": "Hide participants",
     "you": "You",
     "contributors": "Contributors",
     "collapsable": {
