--- a/src/frontend/src/locales/de/rooms.json
+++ b/src/frontend/src/locales/de/rooms.json
@@ -73,10 +73,17 @@
       "effects": ""
     }
   },
+  "sidePanel": {
+    "heading": {
+      "participants": ""
+    },
+    "content": {
+      "participants": ""
+    },
+    "closeButton": ""
+  },
   "participants": {
-    "heading": "",
     "subheading": "",
-    "closeButton": "",
     "contributors": "",
     "collapsable": {
       "open": "",
