✨(frontend) introduce a side panel for effects
It simply renders the video track if enabled. It's a basis
for building the 'blur your screen' feature.

More in the upcoming commits.

--- a/src/frontend/src/locales/de/rooms.json
+++ b/src/frontend/src/locales/de/rooms.json
@@ -73,12 +73,17 @@
       "effects": ""
     }
   },
+  "effects": {
+    "activateCamera": ""
+  },
   "sidePanel": {
     "heading": {
-      "participants": ""
+      "participants": "",
+      "effects": ""
     },
     "content": {
-      "participants": ""
+      "participants": "",
+      "effects": ""
     },
     "closeButton": ""
   },
