--- a/src/frontend/src/locales/de/rooms.json
+++ b/src/frontend/src/locales/de/rooms.json
@@ -74,7 +74,14 @@
     }
   },
   "effects": {
-    "activateCamera": ""
+    "activateCamera": "",
+    "notAvailable": "",
+    "blur": {
+      "light": "",
+      "normal": "",
+      "apply": "",
+      "clear": ""
+    }
   },
   "sidePanel": {
     "heading": {
