--- a/src/frontend/src/locales/fr/rooms.json
+++ b/src/frontend/src/locales/fr/rooms.json
@@ -74,6 +74,7 @@
   "effects": {
     "activateCamera": "Votre camera est désactivée. Choisissez une option pour l'activer.",
     "notAvailable": "L'effet de flou sera bientôt disponible sur votre navigateur. Nous y travaillons ! En attendant, vous pouvez utiliser Google Chrome :(",
+    "heading": "Flou",
     "blur": {
       "light": "Léger flou",
       "normal": "Flou",
