--- a/src/frontend/src/locales/de/rooms.json
+++ b/src/frontend/src/locales/de/rooms.json
@@ -76,6 +76,7 @@
   "effects": {
     "activateCamera": "",
     "notAvailable": "",
+    "heading": "",
     "blur": {
       "light": "",
       "normal": "",
