🚸(frontend) inform user Blurring effects are experimental
Be transparent with users: this version lacks quality and is currently
limited to Chrome, which may lead to frustration.

In addition to providing information, we should implement a method to
collect user feedback and reactions.

--- a/src/frontend/src/locales/de/rooms.json
+++ b/src/frontend/src/locales/de/rooms.json
@@ -82,7 +82,8 @@
       "normal": "",
       "apply": "",
       "clear": ""
-    }
+    },
+    "experimental": ""
   },
   "sidePanel": {
     "heading": {
