--- a/src/frontend/src/locales/en/rooms.json
+++ b/src/frontend/src/locales/en/rooms.json
@@ -80,7 +80,8 @@
       "normal": "Blur",
       "apply": "Enable blur",
       "clear": "Disable blur"
-    }
+    },
+    "experimental": "Experimental feature. A v2 is coming for full browser support and improved quality."
   },
   "sidePanel": {
     "heading": {
