✏️(frontend) fix minors typos in i18n
Found and fixed minor typos in our copywritting.

--- a/src/frontend/src/locales/en/global.json
+++ b/src/frontend/src/locales/en/global.json
@@ -4,7 +4,7 @@
   "cancel": "Cancel",
   "closeDialog": "Close dialog",
   "error": {
-    "heading": "An error occured while loading the page"
+    "heading": "An error occurred while loading the page"
   },
   "feedbackAlert": "Give us feedback",
   "forbidden": {
