✨(frontend) replace login link by ProConnect button
Following their documentation, replace our generic login button,
by a more specific one. Asked by several users.

--- a/src/frontend/src/locales/de/global.json
+++ b/src/frontend/src/locales/de/global.json
@@ -12,7 +12,11 @@
   },
   "loading": "",
   "loggedInUserTooltip": "",
-  "login": "Anmelden",
+  "login": {
+    "buttonLabel": "",
+    "linkLabel": "",
+    "link": ""
+  },
   "logout": "",
   "notFound": {
     "heading": ""
