--- a/src/frontend/src/locales/en/rooms.json
+++ b/src/frontend/src/locales/en/rooms.json
@@ -95,13 +95,18 @@
   "sidePanel": {
     "heading": {
       "participants": "Participants",
-      "effects": "Effects"
+      "effects": "Effects",
+      "chat": "Messages in the chat"
     },
     "content": {
       "participants": "participants",
-      "effects": "effects"
+      "effects": "effects",
+      "chat": "messages"
     },
     "closeButton": "Hide {{content}}"
+  },
+  "chat": {
+    "disclaimer": "The messages are visible to participants only at the time they are sent. All messages are deleted at the end of the call."
   },
   "participants": {
     "subheading": "In room",
