--- a/src/frontend/src/locales/fr/rooms.json
+++ b/src/frontend/src/locales/fr/rooms.json
@@ -95,13 +95,18 @@
   "sidePanel": {
     "heading": {
       "participants": "Participants",
-      "effects": "Effets"
+      "effects": "Effets",
+      "chat": "Messages dans l'appel"
     },
     "content": {
       "participants": "les participants",
-      "effects": "les effets"
+      "effects": "les effets",
+      "chat": "les messages"
     },
     "closeButton": "Masquer {{content}}"
+  },
+  "chat": {
+    "disclaimer": "Les messages sont visibles par les participants uniquement au moment de\nleur envoi. Tous les messages sont supprimés à la fin de l'appel."
   },
   "participants": {
     "subheading": "Dans la réunion",
