--- a/src/frontend/src/locales/de/home.json
+++ b/src/frontend/src/locales/de/home.json
@@ -10,6 +10,9 @@
   "joinMeetingTipContent": "",
   "joinMeetingTipHeading": "",
   "loginToCreateMeeting": "",
+  "moreLinkLabel": "",
+  "moreLink": "",
+  "moreAbout": "",
   "createMenu": {
     "laterOption": "",
     "instantOption": ""
