💄(frontend) enhance home page
I've totally rework the homepage, heavily inspired by GMeet.
Goal: make it more pro, and polished.

--- a/src/frontend/src/locales/en/home.json
+++ b/src/frontend/src/locales/en/home.json
@@ -1,7 +1,7 @@
 {
   "createMeeting": "Create a meeting",
-  "heading": "Welcome in Visio",
-  "intro": "Work easily, from anywhere.",
+  "heading": "Simple and Secure Video Conferencing",
+  "intro": "Communicate and work with ease, without compromising your sovereignty",
   "joinInputError": "Use a meeting link or code. Examples:",
   "joinInputExample": "URL or 10-letter code",
   "joinInputLabel": "Meeting link",
