✨(frontend) add slide feature in the IntroSlider
Avoided installing a dependency for such small piece of code.
I've implemented a naive component, which allow users explore
the slide presenting key feature of our app.

User experience should be ok. However, I might need to optimize
image format and loading strategy. First 'raw' iteration, gonna
optimize it in the future.

--- a/src/frontend/src/locales/de/home.json
+++ b/src/frontend/src/locales/de/home.json
@@ -23,5 +23,30 @@
     "copy": "",
     "copied": "",
     "permissions": ""
+  },
+  "introSlider": {
+    "previous": {
+      "label": "",
+      "tooltip": ""
+    },
+    "next": {
+      "label": "",
+      "tooltip": ""
+    },
+    "slide1": {
+      "title": "",
+      "body": "",
+      "imgAlt": ""
+    },
+    "slide2": {
+      "title": "",
+      "body": "",
+      "imgAlt": ""
+    },
+    "slide3": {
+      "title": "",
+      "body": "",
+      "imgAlt": ""
+    }
   }
 }
