✨(frontend) allow user register to beta feature
I've created a beta form, allowing interested visitors to
register to be a beta user.

This form is yet created with Grist, could be enhance. I'll
investigate using PostHog.

--- a/src/frontend/src/locales/de/home.json
+++ b/src/frontend/src/locales/de/home.json
@@ -29,6 +29,10 @@
       "label": "",
       "tooltip": ""
     },
+    "beta": {
+      "text": "",
+      "tooltip": ""
+    },
     "next": {
       "label": "",
       "tooltip": ""
